<resources>
    <string name="app_name">ShoperSet</string>
    <string name="sign_in_title">Sign in</string>
    <string name="log_in_title">Welcome back</string>
    <string name="profile_title">Profile</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="have_not_an_account">Don\'t have an account</string>
    <string name="log_in">Log in</string>
    <string name="login">Login</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="change_photo">Change photo</string>
    <string name="default_user_name">Satria Adhi Pradana</string>
    <string name="upload_item">Upload item</string>
    <string name="trade_store">Trade store</string>
    <string name="balance_score">$ 1593</string>
    <string name="payment_method">Payment method</string>
    <string name="balance">Balance</string>
    <string name="trade_history">Trade history</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="help">Help</string>
    <string name="log_out">Log out</string>
    <string name="home">Home</string>
    <string name="likes">Likes</string>
    <string name="basket">Basket</string>
    <string name="messages">Messages</string>
    <string name="not_found">not found</string>
    <string name="trade_by">Trade by</string>
    <string name="bata">\u0020bata</string>
    <string name="location">Location</string>
    <string name="looking_for">What are you looking for?</string>
    <string name="phones">Phones</string>
    <string name="headphones">Headphones</string>
    <string name="games">Games</string>
    <string name="cars">Cars</string>
    <string name="furniture">Furniture</string>
    <string name="kids">Kids</string>
    <string name="latest">Latest</string>
    <string name="view_all">View all</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="sale">30% off</string>
    <string name="add_to_card">ADD TO CARD</string>
    <string name="quantity">Quantity:</string>
    <string name="color">Color</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="sign_in_is_success">Sign in is success</string>
    <string name="log_in_is_success">Log in is success</string>
    <string name="reviews">reviews</string>

</resources>