<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/icon_home"
        android:title="@string/home" />
    <item
        android:id="@+id/likeFragment"
        android:icon="@drawable/icon_like"
        android:title="@string/likes" />
    <item
        android:id="@+id/basketFragment"
        android:icon="@drawable/icon_shop"
        android:title="@string/basket" />
    <item
        android:id="@+id/messagesFragment"
        android:icon="@drawable/icon_chat"
        android:title="@string/messages" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/icon_profile"
        android:title="@string/profile_title" />
</menu>