<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileFragment">

    <TextView
        android:id="@+id/tv_title_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textSize="@dimen/text_size_large"
        android:layout_marginTop="@dimen/margin_extra_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/iv_arrow_back_profile"
        android:layout_width="@dimen/size_arrow_back"
        android:layout_height="@dimen/size_arrow_back"
        android:background="@drawable/icon_arrow_left"
        android:layout_marginStart="@dimen/margin_large"
        app:layout_constraintTop_toTopOf="@id/tv_title_profile"
        app:layout_constraintBottom_toBottomOf="@id/tv_title_profile"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_user_photo_profile"
        android:layout_width="@dimen/size_user_image"
        android:layout_height="@dimen/size_user_image"
        android:background="@drawable/icon_user_placeholder"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_profile"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_change_photo_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_btn_sign_in_with"
        android:text="@string/change_photo"
        android:textAlignment="center"
        android:textColor="@color/color_hint"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="@dimen/text_size_small"
        android:layout_marginTop="@dimen/margin_extra_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_user_photo_profile"/>

    <TextView
        android:id="@+id/tv_user_name_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_user_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textSize="@dimen/text_size_large"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_change_photo_profile"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_upload_item_profile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_btn_authorization"
        android:background="@drawable/background_btn_authorization"
        android:text="@string/upload_item"
        android:textSize="@dimen/text_size_medium"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginHorizontal="@dimen/margin_extra_large"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintTop_toBottomOf="@id/tv_user_name_profile"/>

    <ImageView
        android:layout_width="@dimen/size_icon_share"
        android:layout_height="@dimen/size_icon_share"
        android:background="@drawable/icon_share"
        android:elevation="@dimen/elevation_top"
        android:layout_marginStart="@dimen/margin_extra_large"
        app:layout_constraintTop_toTopOf="@id/btn_upload_item_profile"
        app:layout_constraintBottom_toBottomOf="@id/btn_upload_item_profile"
        app:layout_constraintStart_toStartOf="@id/btn_upload_item_profile"
        tools:ignore="ContentDescription" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btn_upload_item_profile"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessLeaf">
            <com.kazak.kirill.shoperset.util.customViews.CustomViewItemProfile
                android:id="@+id/item_tread_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon_item="@drawable/icon_credit_card"
                app:name_item="@string/trade_store"
                app:visibility_balance="invisible"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginHorizontal="@dimen/margin_extra_large"/>
            <com.kazak.kirill.shoperset.util.customViews.CustomViewItemProfile
                android:id="@+id/item_payment_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon_item="@drawable/icon_credit_card"
                app:name_item="@string/payment_method"
                app:visibility_balance="invisible"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginHorizontal="@dimen/margin_extra_large"/>
            <com.kazak.kirill.shoperset.util.customViews.CustomViewItemProfile
                android:id="@+id/item_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon_item="@drawable/icon_credit_card"
                app:name_item="@string/balance"
                app:visibility_balance="visible"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginHorizontal="@dimen/margin_extra_large"/>
            <com.kazak.kirill.shoperset.util.customViews.CustomViewItemProfile
                android:id="@+id/item_trade_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon_item="@drawable/icon_credit_card"
                app:name_item="@string/trade_history"
                app:visibility_balance="invisible"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginHorizontal="@dimen/margin_extra_large"/>
            <com.kazak.kirill.shoperset.util.customViews.CustomViewItemProfile
                android:id="@+id/item_restore_purchase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon_item="@drawable/icon_restore"
                app:name_item="@string/restore_purchase"
                app:visibility_balance="invisible"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginHorizontal="@dimen/margin_extra_large"/>
            <com.kazak.kirill.shoperset.util.customViews.CustomViewItemProfile
                android:id="@+id/item_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon_item="@drawable/icon_help"
                app:name_item="@string/help"
                app:visibility_balance="invisible"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginHorizontal="@dimen/margin_extra_large"/>
            <com.kazak.kirill.shoperset.util.customViews.CustomViewItemProfile
                android:id="@+id/item_log_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon_item="@drawable/icon_log_out"
                app:name_item="@string/log_out"
                app:visibility_balance="invisible"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginHorizontal="@dimen/margin_extra_large"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>