<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_burger_home"
            android:layout_width="@dimen/width_burger"
            android:layout_height="@dimen/height_burger"
            android:background="@drawable/icon_burger"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_extra_large"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_trade_by_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trade_by"
            android:fontFamily="@font/montserrat_bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_extra_large"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toTopOf="@id/iv_burger_home"
            app:layout_constraintBottom_toBottomOf="@id/iv_burger_home"
            app:layout_constraintStart_toEndOf="@id/iv_burger_home"
            app:layout_constraintEnd_toStartOf="@id/tv_bata_home"/>

        <TextView
            android:id="@+id/tv_bata_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bata"
            android:fontFamily="@font/montserrat_bold"
            android:textAlignment="center"
            android:textColor="@color/color_btn_authorization"
            android:textSize="@dimen/text_size_extra_large"
            app:layout_constraintTop_toTopOf="@id/tv_trade_by_home"
            app:layout_constraintBottom_toBottomOf="@id/tv_trade_by_home"
            app:layout_constraintStart_toEndOf="@id/tv_trade_by_home"
            app:layout_constraintEnd_toStartOf="@id/iv_user_photo_home"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_user_photo_home"
            android:layout_width="@dimen/size_user_photo_home"
            android:layout_height="@dimen/size_user_photo_home"
            android:src="@drawable/icon_user_placeholder"
            android:layout_margin="@dimen/margin_extra_large"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/color_hint"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ContentDescription" />

        <com.kazak.kirill.shoperset.util.customViews.CustomViewLocation
            android:id="@+id/custom_view_location_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="@dimen/margin_extra_little"
            app:layout_constraintStart_toStartOf="@id/iv_user_photo_home"
            app:layout_constraintEnd_toEndOf="@id/iv_user_photo_home"
            app:layout_constraintTop_toBottomOf="@id/iv_user_photo_home"/>

        <EditText
            android:id="@+id/edt_looking_for_home"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edt_looking_for"
            android:background="@drawable/background_edt"
            android:hint="@string/looking_for"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="@dimen/text_size_small"
            android:textColorHint="@color/color_hint"
            android:textAlignment="center"
            android:maxLength="30"
            android:lines="1"
            android:singleLine="true"
            android:inputType="textPassword"
            android:layout_marginHorizontal="@dimen/margin_super_large"
            android:layout_marginTop="@dimen/margin_large"
            app:layout_constraintTop_toBottomOf="@id/custom_view_location_home"
            tools:ignore="Autofill" />

        <ImageView
            android:id="@+id/iv_search_home"
            android:layout_width="@dimen/size_search_home"
            android:layout_height="@dimen/size_search_home"
            android:background="@drawable/icon_search"
            android:layout_marginEnd="@dimen/margin_small"
            app:layout_constraintTop_toTopOf="@id/edt_looking_for_home"
            app:layout_constraintBottom_toBottomOf="@id/edt_looking_for_home"
            app:layout_constraintEnd_toEndOf="@id/edt_looking_for_home"
            tools:ignore="ContentDescription" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_category_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_large"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_looking_for_home"
            tools:listitem="@layout/item_category"/>

        <TextView
            android:id="@+id/tv_latest_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latest"
            android:fontFamily="@font/montserrat_semi_bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_large"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_large"
            app:layout_constraintTop_toBottomOf="@id/recycler_category_home"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_view_all_latest_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_btn_sign_in_with"
            android:text="@string/view_all"
            android:textSize="@dimen/text_size_small"
            android:textAlignment="center"
            android:textColor="@color/color_hint"
            android:fontFamily="@font/montserrat_medium"
            android:layout_marginEnd="@dimen/margin_small"
            app:layout_constraintBottom_toBottomOf="@id/tv_latest_home"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_latest_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_latest_home"
            tools:listitem="@layout/item_latest"/>

        <TextView
            android:id="@+id/tv_flash_sale_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flash_sale"
            android:fontFamily="@font/montserrat_semi_bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_large"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_large"
            app:layout_constraintTop_toBottomOf="@id/recycler_latest_home"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_view_all_flash_sale_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_btn_sign_in_with"
            android:text="@string/view_all"
            android:textSize="@dimen/text_size_small"
            android:textAlignment="center"
            android:textColor="@color/color_hint"
            android:fontFamily="@font/montserrat_medium"
            android:layout_marginEnd="@dimen/margin_small"
            app:layout_constraintBottom_toBottomOf="@id/tv_flash_sale_home"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_flash_sale_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_flash_sale_home"
            tools:listitem="@layout/item_flash_sale"/>





    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>